[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Menu_Bg.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/enemySpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Menu_Bg.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Score.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/screenbound.gd" type="Script" id=7]
[ext_resource path="res://Assets/Animes/menu_bg_scroll/bg_scroll.tres" type="Animation" id=8]
[ext_resource path="res://Scenes/clouds.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Animes/menu_bg_scroll/bg_colour1.tres" type="Animation" id=10]
[ext_resource path="res://Assets/Animes/menu_bg_scroll/bg_scroll_2.tres" type="Animation" id=11]
[ext_resource path="res://Scripts/const_anim.gd" type="Script" id=12]
[ext_resource path="res://Assets/Animes/stars/starfield_0000_constellations.png" type="Texture" id=13]
[ext_resource path="res://Assets/Animes/stars/const_anim.tres" type="Animation" id=14]
[ext_resource path="res://Assets/Animes/stars/const_move.tres" type="Animation" id=15]
[ext_resource path="res://Scenes/PowSpawner.tscn" type="PackedScene" id=16]
[ext_resource path="res://buttons/Button_modu.tres" type="Animation" id=17]
[ext_resource path="res://buttons/InGameButtons.tscn" type="PackedScene" id=18]

[node name="Main_Menu" type="Node2D"]
script = ExtResource( 7 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="Menu_BG" parent="." instance=ExtResource( 1 )]
z_index = -1
script = ExtResource( 5 )

[node name="bg_scroll" type="AnimationPlayer" parent="Menu_BG"]
anims/bg_scroll_2 = ExtResource( 11 )
anims/bg_scroll_stage1 = ExtResource( 8 )
anims/bg_scroll_stage2 = ExtResource( 10 )

[node name="enemySpawner" parent="." instance=ExtResource( 2 )]
z_index = 5

[node name="Player_stuff" type="Node" parent="."]

[node name="PLayer" parent="Player_stuff" instance=ExtResource( 3 )]
position = Vector2( -2.6972, -6.21967 )
z_index = 7

[node name="hud" type="CanvasLayer" parent="."]

[node name="Score" parent="hud" instance=ExtResource( 6 )]
position = Vector2( 1002.02, 85.1345 )
z_index = 7

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 544.617, 956.458 )
current = true

[node name="clouds" parent="." instance=ExtResource( 9 )]
position = Vector2( 74.0786, -666.71 )
z_index = 1

[node name="const" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 27.9614, 96.9556 )
texture = ExtResource( 13 )
centered = false

[node name="const_anim" type="AnimationPlayer" parent="const"]
anims/const_anim = ExtResource( 14 )
anims/const_move = ExtResource( 15 )
script = ExtResource( 12 )

[node name="PowSpawner" parent="." instance=ExtResource( 16 )]

[node name="Pause_menu" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Pause" type="Control" parent="Pause_menu"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGameButtons" parent="Pause_menu" instance=ExtResource( 18 )]
modulate = Color( 1, 1, 1, 0 )

[node name="Button_Mod" type="AnimationPlayer" parent="Pause_menu/InGameButtons"]
anims/Button_modu = ExtResource( 17 )
[connection signal="animation_finished" from="const/const_anim" to="const/const_anim" method="_on_const_anim_animation_finished"]
